# feishu-extension-skills

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: README.md  code-structure.md  execution-checklist.md  feishu-server-api-plan.md  interface-freeze.md  permissions.md
docs/modules/: auth.md  core.md  im-chat.md  runtime.md
docs/phase-1/: README.md  code-structure.md  execution-checklist.md  interface-freeze.md  module-template.md  permissions.md  skill-template.md  uat-regression-round2.md  uat-report-2026-03-28-r2.md  uat-report-2026-03-28.md  uat-test-cases.md
docs/phase-1/modules/: auth.md  core.md  im-chat.md  runtime.md
docs/phase-1/skills/: feishu-chat-create.md  feishu-chat-delete.md  feishu-chat-member-add.md  feishu-chat-member-remove.md  feishu-chat-members-list.md
docs/phase-1/uat-artifacts/: 01-create.json  04-list-after-add.json  05-remove.json  07-list-invalid-chat.json  09-bad-json.txt  10-token-cache-check.txt
docs/skills/: feishu-chat.md
docs/templates/: module-template.md  skill-template.md
docs/test/: README.md  conftest.py  feishu-test-secrets.example.json  test_cli_invoke.py
scripts/: publish_clawhub.sh
skills/feishu-chat-create/: SKILL.md
skills/feishu-chat-delete/: SKILL.md
skills/feishu-chat-member-add/: SKILL.md
skills/feishu-chat-member-remove/: SKILL.md
skills/feishu-chat-members-list/: SKILL.md
skills/feishu-chat-server-api/: SKILL.md
src/feishu_extension_skills/: __init__.py
src/feishu_extension_skills.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py
(+93 files in other folders)
